{
    "name": "CameraControls",
    "maps": [
        {
            "name": "OrbitControls",
            "id": "e3f35d8c-2d94-493b-a37a-1eee1c574737",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "1c05922d-0edd-4a72-bd15-075537aab6e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enable Movement",
                    "type": "Button",
                    "id": "06273881-33e3-415a-b720-5b97f9f2c56f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleOrbitMode",
                    "type": "Button",
                    "id": "6a62d0a6-c995-4572-a814-58fafe8a4ca7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7823f356-e30e-472a-a877-89e3d989ace7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bad4192-700f-470b-a039-abd6ca5746c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enable Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25015ec5-d636-4787-95bf-6df896aefa0c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enable Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f41b3091-be97-4f5b-a694-e9aabd5dd65d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleOrbitMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}